--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "normalize.css": "^8.0.1"
+    "normalize.css": "^8.0.1",
+    "postcss-import": "^14.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.4",
     "css-loader": "^5.0.2",
+    "normalize": "^0.3.1",
     "postcss-loader": "^5.0.0",
     "postcss-nested": "^5.0.3",
     "postcss-simple-vars": "^6.0.3",
