--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "css-loader": "^5.0.2",
     "normalize": "^0.3.1",
     "postcss-loader": "^5.0.0",
+    "postcss-mixins": "^7.0.3",
     "postcss-nested": "^5.0.3",
     "postcss-simple-vars": "^6.0.3",
     "style-loader": "^2.0.0",
